--- a/language/en_US.json
+++ b/language/en_US.json
@@ -4,9 +4,10 @@
         "notFoundRegion": "Region %1 does not exist in locale %2.",
         "notFoundKey": "%1 was not found in region %2 of locale %3.",
         "unrecognizedConfigs": "Unrecognized options in setConfigs: %1",
+        "noNewUpdate": "There are no new updates for meta-api.",
         "newestVersion": "A new update (%1) is available for Meta-API",
-        "updated": "Update to new version completed.",
-        "autoUpdate": "A new update (%1) is available for Meta-API. AutoUpdate is allowed, updating to new version...",
+        "updateFinished": "Update to new version completed.",
+        "update": "A new update (%1) is available for Meta-API. Updating to new version...",
         "loginWithCookies": "Login with cookies...",
         "loginWithEmailAndPassword": "Login with account and password...",
         "inputEmail": "Enter your email or account ID: ",
